# rule-based-anomaly-inspector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
examples/: example_usage.py
scripts/: build_reference.py  compare_eval.py  evaluate.py  inspect.py  report_metrics.py  run_inference_panels.py  tune.py
src/anomaly_inspector/: __init__.py  alignment.py  classification.py  cli.py  evaluation.py  gpu.py  inspector.py  panel.py  photometric.py  reference.py  residual.py  roi.py  utils.py  visualization.py
tests/: test_alignment_logpolar.py  test_classification.py  test_evaluation.py  test_inspector.py  test_photometric.py  test_residual.py  test_ridge_fused.py  test_roi.py
