[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-inspector"
version = "0.2.0"
description = "Rule-based industrial anomaly inspector (OpenCV)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CVKim" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "tqdm>=4.66",
    "typer[all]>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "matplotlib>=3.8"]

[project.scripts]
anomaly-build-reference = "anomaly_inspector.cli:build_reference_main"
anomaly-inspect = "anomaly_inspector.cli:inspect_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
